// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global Thread Item Should render thread item with unread messages dot 1`] = `
<TouchableHighlight
  onLongPress={[Function]}
  onPress={[Function]}
  testID="thread_item.post1.item"
  underlayColor="rgba(28,88,217,0.08)"
>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(63,67,80,0.08)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "marginTop": 3,
          "width": 32,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#5d89ea",
            "borderRadius": 4,
            "height": 8,
            "marginTop": 5,
            "width": 8,
          }
        }
        testID="thread_item.post1.unread_dot"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 9,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 12,
              "overflow": "hidden",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#3f4350",
                "fontSize": 15,
                "fontWeight": "600",
                "lineHeight": 22,
                "paddingRight": 8,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(63,67,80,0.08)",
                "borderRadius": 4,
                "maxWidth": "50%",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#3f4350",
                  "fontSize": 10,
                  "fontWeight": "600",
                  "letterSpacing": 0.1,
                  "lineHeight": 16,
                  "marginBottom": 2,
                  "marginLeft": 6,
                  "marginRight": 6,
                  "marginTop": 2,
                  "textTransform": "uppercase",
                }
              }
            >
              CHANNEL 1
            </Text>
          </View>
        </View>
        <InjectIntl(FriendlyDate)
          style={
            Object {
              "color": "rgba(63,67,80,0.64)",
              "fontSize": 12,
              "fontWeight": "400",
            }
          }
        />
      </View>
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#3f4350",
            "fontSize": 15,
            "lineHeight": 20,
          }
        }
      >
        <RemoveMarkdown
          value=""
        />
      </Text>
      <Connect(InjectIntl(ThreadFooter))
        location="GlobalThreads"
        testID="thread_item.post1.footer"
        theme={
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        thread={
          Object {
            "id": "post1",
            "unread_replies": 5,
          }
        }
        threadStarter={
          Object {
            "id": "user1",
          }
        }
      />
    </View>
  </View>
</TouchableHighlight>
`;

exports[`Global Thread Item Should show unread mentions count 1`] = `
<TouchableHighlight
  onLongPress={[Function]}
  onPress={[Function]}
  testID="thread_item.post1.item"
  underlayColor="rgba(28,88,217,0.08)"
>
  <View
    style={
      Object {
        "borderBottomColor": "rgba(63,67,80,0.08)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 16,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "marginTop": 3,
          "width": 32,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#1e325c",
            "borderRadius": 9,
            "height": 18,
            "width": 18,
          }
        }
        testID="thread_item.post1.unread_mentions"
      >
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#ffffff",
              "fontFamily": "Open Sans",
              "fontSize": 10,
              "fontWeight": "700",
              "lineHeight": 16,
            }
          }
        >
          5
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "marginBottom": 9,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "marginRight": 12,
              "overflow": "hidden",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#3f4350",
                "fontSize": 15,
                "fontWeight": "600",
                "lineHeight": 22,
                "paddingRight": 8,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(63,67,80,0.08)",
                "borderRadius": 4,
                "maxWidth": "50%",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#3f4350",
                  "fontSize": 10,
                  "fontWeight": "600",
                  "letterSpacing": 0.1,
                  "lineHeight": 16,
                  "marginBottom": 2,
                  "marginLeft": 6,
                  "marginRight": 6,
                  "marginTop": 2,
                  "textTransform": "uppercase",
                }
              }
            >
              CHANNEL 1
            </Text>
          </View>
        </View>
        <InjectIntl(FriendlyDate)
          style={
            Object {
              "color": "rgba(63,67,80,0.64)",
              "fontSize": 12,
              "fontWeight": "400",
            }
          }
        />
      </View>
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#3f4350",
            "fontSize": 15,
            "lineHeight": 20,
          }
        }
      >
        <RemoveMarkdown
          value=""
        />
      </Text>
      <Connect(InjectIntl(ThreadFooter))
        location="GlobalThreads"
        testID="thread_item.post1.footer"
        theme={
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        thread={
          Object {
            "id": "post1",
            "unread_mentions": 5,
            "unread_replies": 5,
          }
        }
        threadStarter={
          Object {
            "id": "user1",
          }
        }
      />
    </View>
  </View>
</TouchableHighlight>
`;
